force-app/main/default/objects/ScheduledCourse__c/ScheduledCourse__c.object-meta.xml
<CustomObject>
    <description>Training schedule for each course</description>
    <label>Scheduled Course</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>SheduledCourseId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>