force-app/main/default/objects/ScheduledCourse__c/fields/CourseId__c.field-meta.xml
<CustomField>
    <fullName>CourseId__c</fullName>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Scheduled Courses</relationshipLabel>
    <relationshipName>Scheduled_Courses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>