force-app/main/default/objects/ScheduledCourse__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>We can change it to picklist</description>
    <label>Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>