force-app/main/default/objects/ScheduledCourse__c/fields/MaxNoRegistrations__c.field-meta.xml
<CustomField>
    <fullName>MaxNoRegistrations__c</fullName>
    <label>Max No Registrations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>