force-app/main/default/objects/ScheduledCourse__c/fields/PublishedToWeb__c.field-meta.xml
<CustomField>
    <fullName>PublishedToWeb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Published To Web</label>
    <type>Checkbox</type>
</CustomField>