force-app/main/default/objects/ScheduledCourse__c/fields/RegistreeAcknowledgement__c.field-meta.xml
<CustomField>
    <fullName>RegistreeAcknowledgement__c</fullName>
    <label>Registree Acknowledgement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>