force-app/main/default/objects/ScheduledCourse__c/fields/WebCourseDescription__c.field-meta.xml
<CustomField>
    <fullName>WebCourseDescription__c</fullName>
    <label>Web Course Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>