force-app/main/default/objects/ScheduledCourse__c/fields/WebCourseName__c.field-meta.xml
<CustomField>
    <fullName>WebCourseName__c</fullName>
    <label>Web Course Name</label>
    <type>TextArea</type>
</CustomField>